# cpp-config-ini

./: .gitignore  CMakeLists.txt  README.md  configure  make  monte_carlo_config.ini  old+specific_algorithm_config.ini  point.hpp  specific_algorithm_config.ini
scripts/: configure_boost.sh  configure_cmake.sh  configure_gcc.sh  make_cpp.sh
source/: main.cpp  main_1.cpp  main_2.cpp
source/config_library/: CMakeLists.txt  config_reader.cpp  config_reader.hpp  validation_rules.cpp  validation_rules.hpp
source/cpp/: CMakeLists.txt
source/cpp/ThreadPool/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.h
source/cpp/math/: complex.h
